tests/fixtures/valid/docs_classify.lby
fn classify value i64 -> i64
    if value < 0
        -1
    elif value == 0
        0
    else
        1
