tests/fixtures/invalid/conditional_branch_mismatch.lby
fn main -> i64
    5 if true else "no"
